add: intalacion de FlyonUI para componentes de Taildwind

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,7 @@
 @import "tailwindcss";
 
 @plugin "@midudev/tailwind-animations";
+@plugin "flyonui";
+@import "./node_modules/flyonui/variants.css";
+
+@source "./node_modules/flyonui/dist/index.js";
