--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,6 @@
 @import "tailwindcss";
+@import "flyonui/variants.css";
 
 @plugin "@midudev/tailwind-animations";
 @plugin "flyonui";
-@import "./node_modules/flyonui/variants.css";
-
 @source "./node_modules/flyonui/dist/index.js";
