add: flyui icons para integrar mejor los componentes, se finalizó la lógica del formular

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,3 +4,4 @@
 @plugin "@midudev/tailwind-animations";
 @plugin "flyonui";
 @source "./node_modules/flyonui/dist/index.js";
+@plugin "@iconify/tailwind4";
