--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,3 +5,7 @@
 @plugin "flyonui";
 @source "./node_modules/flyonui/dist/index.js";
 @plugin "@iconify/tailwind4";
+
+.logo-giftly-sombra {
+	filter: drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.8));
+}
